# OmniFile_Processor

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_v5.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.training  GETTING_STARTED.md  LICENSE  MIGRATION.md  Makefile  README.md  SECURITY.md  SUGGESTIONS.md  __init__.py  app.py  app_batch.py  config.py  database.py  docker-compose.override.yml  docker-compose.yml  gui_app.py  hf_app.py  install.sh  justfile  main.py  mkdocs.yml  nginx.conf  process.py  pyproject.toml  requirements-base.txt  requirements-colab.txt  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements-gateway.txt  requirements-hf.txt  requirements-nlp-arabic.txt  requirements-nlp.txt  (+8 more)
.github/workflows/: ci.yml  docs.yml  release.yml  train.yml
_claude_merge/: CLAUDE.md
_claude_merge/extracted_notebooks/: Another copy of HandwrittenOCR.ipynb  Arabic_OCR_Gradio_Pro.ipynb  Arabic_OCR_Ultimate.ipynb  Arabic_OCR_v5_Final.ipynb  Arabic_OCR_v5_Final_Enhanced.ipynb  Arabic_OCR_v5_deepseek.ipynb  Copy of HandwrittenOCR.ipynb  HandwrittenOCR(1).ipynb  HandwrittenOCR(2).ipynb  HandwrittenOCR_Colab.ipynb  HandwrittenOCR_Colab_zai.ipynb  HandwrittenOCR_Final.ipynb  HandwrittenOCR_Final_claude.ipynb  HandwrittenOCR_Integrated_Monitoring_Colab.ipynb  OmniFile_v500_Colab.ipynb  Untitled0(1).ipynb  (+7 more)
_dev_references/: ANALYSIS.md  ANALYSIS_DEEPSEEK.md  ANALYSIS_LECHAT.md  ANALYSIS_QWEN.md  README.md  ROADMAP.md
backend/: main.py
config/: medical_dict.json
docs/: API_DOCS.md  DEPENDENCY_PROFILES.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  PRIORITIZED_SUGGESTIONS.md  QUICKSTART.md  REFERENCE_PROJECTS.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  USER_GUIDE.md  feature_requests_chat_log.txt  medical_ocr_readme.md
examples/: advanced_ocr_pipeline.py  evaluation_example.py  interactive_learning_demo.py  nlp_medical_pipeline.py  nlp_pipeline.py  ocr_basic.py
frontend/: Dockerfile.dev
interactive_learning/: __init__.py
k8s/: namespace.yaml
mobile/: __init__.py  manifest.json  ocr-review.html
mobile_review/: README.md  server.py  server_v2.py
mobile_review_v2/: App.js  README.md  package.json
notebooks/: HandwrittenOCR_Colab_Ready.ipynb  HandwrittenOCR_Ultimate.ipynb  Medical_OCR_Review_Colab.py  OmniFile_Colab_Launcher.ipynb  OmniFile_Colab_Notebook.py  OmniFile_Complete.ipynb  OmniFile_Complete_v4.ipynb  OmniFile_Diagnostic.ipynb  OmniFile_Gradio_Debugger.ipynb  OmniFile_Processor_Colab_Debug.ipynb  OmniFile_v3_Testing.ipynb  OmniFile_v500_Colab.ipynb  README.md  TrOCR_FineTuning_Colab.py  batch_medical_ocr.ipynb  medical_ocr_reviewer.ipynb  trocr_finetuner.ipynb  vocab_processor_colab.ipynb
scripts/: benchmark_kitab.py  deploy_to_hf.sh  generate_arabic_htr_dataset.py  modify_hf_app.py  quality_check.sh  setup.sh  setup_test_env.py  start_gateway.sh  test_basic.py  test_interactive.py  test_segmentation.py
src/: __init__.py  correction.py  correction_trainer_ui.py  database.py  export.py  finetuning.py  gradio_ui.py  logger.py  main.py  migration.py  pdf_processor.py  preprocessing.py  recognition.py  reconstruction.py  review_ui.py  study_guide.py
tests/: __init__.py  conftest.py  test_arabic_nlp_utils.py  test_integration.py  test_metrics.py  test_ocr_engine.py
tools/: benchmark_ocr.py  build_training_data.py  convert_to_dataset.py  data_mixing_logistic.py  double_blind_reviewer.py  offline_medical_ocr.py  review_dashboard.py  smart_dictionary.py  streamlit_multi_upload.py  streamlit_segmentation_app.py  voting_tracker.py
(+235 files in other folders)
