[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omnifile-processor"
version = "4.2.0"
description = "معالج مستندات OCR ذكي يدعم العربية — 5 محركات + NLP + تصدير"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dr. Abdulmalek Tamer Al-husseini", email = "Abdulmalek.husseini@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ocr", "arabic", "nlp", "document-processing", "handwriting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Arabic",
]
dependencies = [
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7.0", "pytesseract>=0.3.10"]
nlp = ["transformers>=4.35.0", "torch>=2.0.0"]
full = ["omnifile-processor[ocr,nlp]"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[project.scripts]
omnifile = "src.main:main"

[project.urls]
Homepage = "https://github.com/DrAbdulmalek/OmniFile_Processor"
Repository = "https://github.com/DrAbdulmalek/OmniFile_Processor"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
