[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "omnifile-processor"
version = "4.2.0"
description = "معالج مستندات OCR ذكي يدعم العربية — 5 محركات + NLP + تصدير"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dr. Abdulmalek Tamer Al-husseini", email = "Abdulmalek.husseini@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ocr", "arabic", "nlp", "document-processing", "handwriting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Arabic",
]
dependencies = [
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7.0", "pytesseract>=0.3.10"]
nlp = ["transformers>=4.35.0", "torch>=2.0.0"]
gateway = [
    "fastapi[standard]>=0.136.1",
    "uvicorn>=0.46.0",
    "httpx[socks]>=0.28.1",
    "markdown-it-py>=4.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.7.0",
    "pydantic-settings>=2.14.1",
    "openai>=2.36.0",
    "loguru>=0.7.0",
    "aiohttp>=3.13.4",
]
full = ["omnifile-processor[ocr,nlp,gateway]"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[project.scripts]
omnifile = "src.main:main"
omnifile-gateway = "modules.ai.gateway.server:main"

[project.urls]
Homepage = "https://github.com/DrAbdulmalek/OmniFile_Processor"
Repository = "https://github.com/DrAbdulmalek/OmniFile_Processor"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
